--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,11 @@
     "sass": "^1.79.5"
   },
   "devDependencies": {
+    "@babel/cli": "^7.25.7",
+    "@babel/core": "^7.25.8",
+    "@babel/preset-env": "^7.25.8",
+    "@babel/preset-react": "^7.25.7",
+    "@babel/preset-typescript": "^7.25.7",
     "@eslint/js": "^9.11.1",
     "@playwright/test": "^1.48.0",
     "@testing-library/jest-dom": "^6.5.0",
@@ -28,6 +33,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
     "babel-jest": "^29.7.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -42,6 +48,7 @@
     "playwright": "^1.48.0",
     "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "vite-plugin-babel": "^1.2.0"
   }
 }
