--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,10 +31,12 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.8.1",
+    "@typescript-eslint/parser": "^8.8.1",
     "@vitejs/plugin-react": "^4.3.2",
     "babel-jest": "^29.7.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "eslint": "^9.11.1",
+    "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.0",
@@ -48,6 +50,7 @@
     "playwright": "^1.48.0",
     "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
+    "typescript": "^5.5.4",
     "vite": "^5.4.8",
     "vite-plugin-babel": "^1.2.0"
   }
