--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
     "@babel/preset-typescript": "^7.25.7",
     "@eslint/js": "^9.11.1",
     "@playwright/test": "^1.48.0",
-    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.13",
@@ -50,6 +50,7 @@
     "jest-transform-stub": "^2.0.0",
     "playwright": "^1.48.0",
     "prettier": "^3.3.3",
+    "react-router-dom": "^6.27.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.5.4",
     "vite": "^5.4.8",
