do-3 = fe-33 add Ingress Ressources

--- a/deployment/personal-finance-app.yaml
+++ b/deployment/personal-finance-app.yaml
@@ -31,25 +31,78 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  finalizers:
-    - service.kubernetes.io/load-balancer-cleanup
-  labels:
-    app: personal-finance-app
-  name: personal-finance-app
+  name: personal-finance-app-service
   namespace: default
 spec:
-  allocateLoadBalancerNodePorts: true
-  externalTrafficPolicy: Cluster
-  internalTrafficPolicy: Cluster
-  ipFamilies:
-    - IPv4
-  ipFamilyPolicy: SingleStack
   ports:
-    - nodePort: 32573
-      port: 80
+    - port: 80
       protocol: TCP
       targetPort: 80
   selector:
     app: personal-finance-app
-  sessionAffinity: None
-  type: LoadBalancer
+  type: ClusterIP
+---
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: letsencrypt-prod
+spec:
+  acme:
+    server: https://acme-v02.api.letsencrypt.org/directory
+    email: watchfromtheshore@gmail.com
+    privateKeySecretRef:
+      name: letsencrypt-prod
+    solvers:
+      - http01:
+          ingress:
+            class: nginx
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: philippkraatz-com-cert
+  namespace: default
+spec:
+  secretName: personal-finance-app-tls
+  issuerRef:
+    name: letsencrypt-prod
+    kind: ClusterIssuer
+  dnsNames:
+    - philippkraatz.com
+    - www.philippkraatz.com
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: personal-finance-app-ingress
+  annotations:
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  ingressClassName: nginx
+  rules:
+    - host: philippkraatz.com
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: personal-finance-app-service
+                port:
+                  number: 80
+    - host: www.philippkraatz.com
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: personal-finance-app-service
+                port:
+                  number: 80
+  tls:
+    - hosts:
+        - philippkraatz.com
+        - www.philippkraatz.com
+      secretName: personal-finance-app-tls
