--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,8 @@ jobs:
     runs-on: ubuntu-latest
 
     needs: build
+
+    continue-on-error: true
     
     steps:
       - name: Checkout code
@@ -64,7 +66,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     
-    needs: build
+    needs: scan
 
     steps:
     - name: Checkout master
