do-5 add cd frontend

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Checkout master
         uses: actions/checkout@main
 
+      - name: Change Directory
+        run: cd frontend
+
       - name: Install Dependencies
         run: npm install
 
