--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,14 +18,15 @@ jobs:
       - name: Checkout master
         uses: actions/checkout@main
 
-      - name: Change Directory
-        run: cd frontend
-
       - name: Install Dependencies
-        run: npm install
+        run: |
+         cd frontend
+         npm install
 
       - name: Run Unit Tests
-        run: npm run test
+        run: |
+         cd frontend
+         npm run test
   
   build:
     runs-on: ubuntu-latest
