--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -204,7 +204,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     
-    needs: scan
+    needs: e2e-tests
 
     steps:
       - name: Checkout master
