--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -192,7 +192,7 @@ jobs:
       - name: Run Playwright tests
         run: |
          cd frontend
-         npx playwright test e2e-tests
+         npx playwright test ui-tests
 
       - uses: actions/upload-artifact@v4
         if: always()
