--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -200,11 +200,72 @@ jobs:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
+
+  gui-tests:
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
+
+    needs: scan
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+
+      - name: Install dependencies
+        run: |
+          cd frontend
+          npm ci
+
+      - name: Install Playwright Browsers
+        run: |
+          cd frontend
+          npx playwright install --with-deps
+
+      - name: Install doctl
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+
+      - name: Log in to DigitalOcean Container Registry with short-lived credentials
+        run: doctl registry login --expiry-seconds 1200
+
+      - name: Download PACKAGE_VERSION Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: PACKAGE_VERSION
+          path: .
+
+      - name: Read PACKAGE_VERSION
+        id: read_package_version
+        run: |
+          PACKAGE_VERSION=$(cat PACKAGE_VERSION)
+          echo "PACKAGE_VERSION=$PACKAGE_VERSION" >> $GITHUB_ENV
+
+      - name: Pull image from registry
+        run: docker pull registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION }}
+
+      - name: Run image from registry
+        run: docker run -d -p 80:80 registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION }}
+
+      - name: Run Playwright tests
+        run: |
+          cd frontend
+          npx playwright test gui-tests
+
+      - name: Create Artifact for Playwright report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-report-integration
+          path: playwright-report/
+          retention-days: 30
           
   deploy:
     runs-on: ubuntu-latest
     
-    needs: e2e-tests
+    needs: [e2e-tests, gui-tests]
 
     steps:
       - name: Checkout master
