--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -192,7 +192,7 @@ jobs:
       - name: Run Playwright tests
         run: |
          cd frontend
-         npx playwright test ui-tests
+         npx playwright test ui-tests/e2e-tests
 
       - uses: actions/upload-artifact@v4
         if: always()
@@ -247,7 +247,7 @@ jobs:
         run: docker pull registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION }}
 
       - name: Run image from registry
-        run: docker run -d -p 80:80 registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION }}
+        run: docker run -d -p 5173:80 registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION }}
 
       - name: Run Playwright tests
         run: |
