--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -3,12 +3,14 @@ name: test and build
 on:
   push:
     branches:
-      - '!master'
-      - '!develop'
+      - '*'
 
 jobs:
+
   unit-tests:
     runs-on: ubuntu-latest
+
+    if: github.ref != 'refs/heads/master' && github.ref != 'refs/heads/develop'
 
     steps:
       - name: Checkout master
@@ -26,6 +28,8 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+
+    if: github.ref != 'refs/heads/master' && github.ref != 'refs/heads/develop'
 
     needs: unit-tests
 
