--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -328,6 +328,6 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: integration-tests
-          path: integration-tests/
+          name: new-vrts
+          path: ui-tests/gui-tests
           retention-days: 30
