--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -309,7 +309,7 @@ jobs:
         run: docker pull registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION }}
 
       - name: Run image from registry
-        run: docker run -d -p 80:80 registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION }}
+        run: docker run -d -p 5173:80 registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION }}
 
       - name: Run Playwright tests
         run: |
@@ -320,8 +320,8 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: integration-tests
-          path: integration-tests/
+          name: new-vrts
+          path: ui-tests/gui-tests
           retention-days: 30
           
   deploy:
