--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -206,7 +206,7 @@ jobs:
         if: always()
         with:
           name: playwright-report
-          path: ui-tests/e2e-tests
+          path: frontend/ui-tests/e2e-tests
           retention-days: 30
 
   gui-tests:
@@ -267,7 +267,7 @@ jobs:
         if: always()
         with:
           name: playwright-report-integration
-          path: ui-tests/gui-tests
+          path: frontend/ui-tests/gui-tests
           retention-days: 30
 
   create-new-vrts:
@@ -329,5 +329,5 @@ jobs:
         if: always()
         with:
           name: new-vrts
-          path: ui-tests/gui-tests
+          path: frontend/ui-tests/gui-tests
           retention-days: 30
