--- a/backend/package.json
+++ b/backend/package.json
@@ -6,18 +6,18 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "../backendalt/node_modules/.bin/nest build",
-    "format": "../backendalt/node_modules/.bin/prettier --write \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\"/src/**/*.ts\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\" \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\"../backendneu/test/**/*.ts\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\"",
-    "start": "../backendalt/node_modules/.bin/nest start",
-    "start:dev": "../backendalt/node_modules/.bin/nest start --watch",
-    "start:debug": "../backendalt/node_modules/.bin/nest start --debug --watch",
+    "build": "../backend/node_modules/.bin/nest build",
+    "format": "../backend/node_modules/.bin/prettier --write \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\"/src/**/*.ts\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\" \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\"../backendneu/test/**/*.ts\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\"",
+    "start": "../backend/node_modules/.bin/nest start",
+    "start:dev": "../backend/node_modules/.bin/nest start --watch",
+    "start:debug": "../backend/node_modules/.bin/nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "../backendalt/node_modules/.bin/eslint \\\"{src,apps,libs,test}/**/*.ts\\\" --fix",
-    "test": "../backendalt/node_modules/.bin/jest",
-    "test:watch": "../backendalt/node_modules/.bin/jest --watch",
-    "test:cov": "../backendalt/node_modules/.bin/jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register ../backendalt/node_modules/.bin/jest --runInBand",
-    "test:e2e": "../backendalt/node_modules/.bin/jest --config /test/jest-e2e.json"
+    "lint": "../backend/node_modules/.bin/eslint \\\"{src,apps,libs,test}/**/*.ts\\\" --fix",
+    "test": "../backend/node_modules/.bin/jest",
+    "test:watch": "../backend/node_modules/.bin/jest --watch",
+    "test:cov": "../backend/node_modules/.bin/jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register ../backend/node_modules/.bin/jest --runInBand",
+    "test:e2e": "../backend/node_modules/.bin/jest --config /test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
