--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "test:gui": "playwright test ui-tests/gui-tests"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
