be-1 fix toomanyrequests transaction error

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "format": "prettier --write .",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "jest",
+    "test": "jest && cd .. && cd backend && jest",
     "test:e2e": "playwright test ui-tests/e2e-tests",
     "test:gui": "playwright test ui-tests/gui-tests"
   },
