--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -38,4 +38,4 @@ jobs:
         uses: actions/checkout@main
 
       - name: Build container image
-        run: docker build -t registry.digitalocean.com/kephalosk/personal-finance-app:latest -f deployment/Dockerfile .
+        run: docker build -t registry.digitalocean.com/kephalosk/personal-finance-app:latest -f deployment/frontend.Dockerfile .
