--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -81,7 +81,7 @@ jobs:
           echo "PACKAGE_VERSION=$PACKAGE_VERSION" >> $GITHUB_ENV
         
       - name: Build container image
-        run: docker build -t registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION }} -f deployment/Dockerfile .
+        run: docker build -t registry.digitalocean.com/kephalosk/personal-finance-app:${{ env.PACKAGE_VERSION }} -f deployment/frontend.Dockerfile .
   
       - name: Install doctl
         uses: digitalocean/action-doctl@v2
