df-6 fix backend path

--- a/deployment/nestjs-backend.yaml
+++ b/deployment/nestjs-backend.yaml
@@ -64,7 +64,7 @@ spec:
     - host: backend.philippkraatz.com
       http:
         paths:
-          - path: /(/|$)(.*)
+          - path: /api(/|$)(.*)
             pathType: ImplementationSpecific
             backend:
               service:
